validation refactor + tests
